--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>Daniyal Khan</h1>
-    <img src="/me.png" alt="Picture">
+    <img src="https://github.com/Khan-Daniyal/cs50w-Project0/blob/master/me.png?raw=true" alt="Picture">
     </body>
 </html>
