--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>Daniyal Khan</h1>
-    <img src="images/me.PNG" alt="Picture" style="display: block; margin: auto;" />
+    <img src="images/me.PNG" alt="Picture" />
     </body>
 </html>
