--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>Daniyal Khan</h1>
-    <img src="images/me.png" alt="Picture" />
+    <img src="https://en.wiktionary.org/wiki/D#/media/File:LetterD.svg" alt="Picture" />
     </body>
 </html>
