--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>Daniyal Khan</h1>
-    <img src="images/me.png" alt="Picture" style="min-width:25%" />
+    <img src="images/me.png" alt="Picture" style="width:25%" />
     </body>
 </html>
