--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+    <style>
+      body {
+        background-image: url('images/background.jpg');
+      }
+    </style>
+
     <title>Daniyal Khan Portfolio</title>
   </head>
   <body>
+
     <h1>Daniyal Khan</h1>
+
     <img src="images/me.png" alt="Picture" style="width:25%" />
+
     </body>
 </html>
