--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       body {
         background-image: url('images/background.jpg');
       }
+      width:100%
     </style>
 
     <title>Daniyal Khan Portfolio</title>
