--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <style>
       body {
         background-image: url('images/background.jpg');
+        background-size: cover;
       }
-      width:100%
+      
     </style>
 
     <title>Daniyal Khan Portfolio</title>
