--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Engineering Intern - Allied Technologies Logistic And Support (ATLS) </b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - Aug 2018</h6>
           <ul>
             <li>Collaborated with senior engineers on projects and offered insight. </li>
             <li>Read and interpreted aircraft blueprints, technical drawings, schematics and computer-generated reports. </li>
@@ -121,24 +121,32 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>Web Development! All I need to know in one place</p>
+          <h5 class="w3-opacity"><b>Illinois Institute of Technology - BS Computer Engineering</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Dec 2021 (Expected)</h6>
+          <ul>
+            <li style="font-weight: bold">GPA: 3.3/4.0  </li>
+            <li>Received highest level of International Scholarship.</li>
+            <li>Dean's List two semesters. </li>
+          </ul>
           <hr>
         </div>
+
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>London Business School</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
-          <p>Master Degree</p>
+          <h5 class="w3-opacity"><b>Harvard University - CS50 Web Programming (Online Course)</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020 - Aug 2020</h6>
+          <ul>
+            <li>Learnt Web Programming in HTML, CSS and Python.</li>
+          </ul>
           <hr>
         </div>
-        <div class="w3-container">
+
+        <!--<div class="w3-container">
           <h5 class="w3-opacity"><b>School of Coding</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
           <p>Bachelor Degree</p><br>
-        </div>
+        </div> -->
       </div>
 
     <!-- End Right Column -->
@@ -152,13 +160,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <a href="https://www.facebook.com/daniyal.khaan/" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity w3-xlarge"></i></a>
+  <a href="https://www.instagram.com/daniyalkhan_/?hl=en" target="_blank"><i class="fa fa-instagram w3-hover-opacity w3-xlarge"></i></a>
+  <a href="https://www.linkedin.com/in/khan-daniyal/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity w3-xlarge"></i></a>
+  <a href="https://github.com/Khan-Daniyal" target="_blank"><i class="fa fa-github w3-hover-opacity w3-xlarge"></i></a>
 </footer>
 
 </body>
