--- a/index.html
+++ b/index.html
@@ -86,7 +86,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <!-- Right Column -->
     <div class="w3-twothird">
+
+
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+
+        <h1 class="w3-text-grey w3-padding-16"><i class="fa fa-star fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Professional Summary</h1>
+        
+        <div class="w3-container">
+          <p>
+            Energetic university student with upcoming Bachelor of Science degree in Computer Engineering. Detail-oriented and motivated to stay on task, meet aggressive timelines and accomplish goals. Strong analytical and organizational skills within tech industry. 
+          </p>
+        </div>
+      </div>
     
+
+    <!-- -->
+
       <div class="w3-container w3-card w3-white w3-margin-bottom">
 
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
