--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
           <p>Web Programming - HTML & CSS</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">Intermediate</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">Competent</div>
           </div>
           <p>Python</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-              <div class="w3-center w3-text-white">Advanced</div>
+              <div class="w3-center w3-text-white">Proficient</div>
             </div>
           </div>
           <p>Hardware & Logic Design</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">Advanced</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">Proficient</div>
           </div>
           <p>SQL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">Intermediate</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">Competent</div>
           </div>
           <br>
 
